--- a/templates/after_login/edit_user.html
+++ b/templates/after_login/edit_user.html
@@ -10,8 +10,8 @@
             {{ form.country }}
     </div>
     <div class="form-group">
-        <label>Country:</label>
-            {{ form.country }}
+        <label>City:</label>
+            {{ form.city }}
     </div>
     <div class="form-group">
         <label>Adress:</label>
