--- a/templates/before_login/home.html
+++ b/templates/before_login/home.html
@@ -119,7 +119,7 @@ body {
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">AlphaTrade. <span class="text-muted">Start trading easily.</span></h2>
-        <p class="h4">AlphaTrade is a platform that allows you to buy or sell stocks. </p>
+        <p class="h4">AlphaTrade is a platform that allows users to buy or sell stocks for different companies. </p>
       </div>
       <div class="col-md-5 order-md-1">
        <img src="{% static 'images/trading_photo.jpg' %}" width="1500" height="500" class="img-thumbnail">
